# cashing_backend

./: .clinerules  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  cashin_dev.db  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/commands/: diagnose-railway.md
.github/: AGENTS.md  INSTRUCTIONS.md  SKILLS.md  TOOLS.md  copilot-instructions.md
.github/instructions/: cashing-agentic-saas.instructions.md
alembic/: env.py
alembic/versions/: 001_secop_tables.py  002_contrato_documento_proveedor.py  003_documento_fuente_contrato_id.py  004_secop_documentos_fks.py  005_usuarios_failed_login_attempts.py  006_google_tokens_table.py  007_agent_runs_borradores.py  008_pgvector_embeddings.py  009_preferencias_usuario.py  010_contrato_valor_adicion.py  011_requisitos_documentos.py  012_agent_checkpoints.py  013_google_auth_fields.py  014_photo_url_text.py  015_contrato_ubicacion_cargo_supervisor.py  016_obligacion_etiqueta.py  017_categoria_documento.py  018_documentos_fuente_dedup_index.py  019_requisitos_cuenta.py  (+4 more)
app/: main.py
context/: 12. INFORME DE ACTIVIDADES 3.docx  6. INFORME DE SUPERVISION 3.docx
docs/: AGENT_SPECS.md  BITACORA_NEON_MCP_2026-07.md  PLAN_MEJORA_CASHING.md  plan-backend.md  testing-swagger.md  usability-findings.md  wizard-roadmap.md
mcp_servers/: __init__.py  calendar_server.py  drive_server.py  evidence_server.py  filesystem_server.py  gmail_server.py  mcp_config.json
queries/: 01_contrato_completo.sql  02_cuenta_cobro_detalle.sql  03_secop_contrato_con_documentos.sql  04_dashboard_usuario.sql  05_periodos_pendientes.sql  06_contexto_agente.sql  07_relaciones_schema.sql
scripts/: _check_pccntr_api.py  _check_secop2_api.py  _check_secop_docs.py  _check_secop_fields.py  _diag_all_docs.py  _diag_docs_full.py  _diag_full.py  _diag_join.py  _diag_modifications.py  _diag_mods.py  _diag_mods2.py  _diag_mods3.py  _diag_mods_fields.py  _diag_ntc.py  _diag_raw.py  _diagnose_docs.py  _diagnose_docs2.py  _discover_secop_datasets.py  _explore_secop2_headed.py  _find_integration_key.py  _get_contract_docs.py  _inspect_secop_docs.py  _reset_pw.py  _scrape_secop2.py  _search_pccntr.py  _secop2_page_BDOS_Oppor.html  _secop2_page_Opportunit.html  _test_pccntr_session.py  _test_secop2_post.py  _test_secop_campos.py  _test_secop_proceso.py  backfill_valor_adicion.py  diagnose_extraction.py  diagnose_railway.py  diagnose_secop_docs.py  evidence_demo.py  generate_secrets.py  grant_credits.py  kill-local.ps1  load_secrets.py  (+6 more)
secop-scraper/: Dockerfile  README.md  railway.toml  requirements.txt
tests/: conftest.py  test_actividad.py  test_agent.py  test_agent_chat_api.py  test_agent_chat_context.py  test_agent_chat_errors.py  test_agent_chat_robustness.py  test_agent_chat_service.py  test_agent_service_unit.py  test_agent_sessions.py  test_auth_api.py  test_auth_google.py  test_auth_service.py  test_calendar_adapter.py  test_chat_tokens.py  test_checklist_api.py  test_checklist_autogen.py  test_checklist_deteccion_errores.py  test_checklist_secop_autolink.py  test_checklist_secop_fuzzy_custom.py  test_checklist_service.py  test_checkpoint_gate.py  test_cobertura_service.py  test_constancia_service.py  test_contrato_api.py  test_contrato_service.py  test_contrato_service_unit.py  test_core_auth.py  test_credito_pago.py  test_creditos_sync.py  test_cruzar_service.py  test_cuenta_cobro_api.py  test_cuenta_cobro_bulk_unit.py  test_cuenta_cobro_service.py  test_cuenta_cobro_service_unit.py  test_dashboard.py  test_document_auto_create.py  test_document_classifier.py  test_document_multimodal.py  test_document_parser_archives.py  (+71 more)
(+240 files in other folders)
